# hydro

./: .env.example  .gitignore  CLAUDE.md  PHASE1_BRIEFING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: test.yml
.playwright-mcp/: page-2026-06-10T03-19-27-447Z.yml  page-2026-06-10T03-19-37-234Z.yml  page-2026-06-10T03-20-10-465Z.yml
crops/: lettuce.yaml
deploy/: .env.example  README.md  cleanup.sh  hardening.sh  hydro.service  install.sh
docs/: PHASE1_PLAN.md  PHASE2_PLAN.md  PHASE3_PLAN.md  PHASE3_RESEARCH.md  architecture.md  calibration.md  control.md  phase1_flow.html  pi-hardening.md  profile-authoring.md  wiring.md
docs/research/: Hydroponics Business Research To Date – Integrated Summary.md  Hydroponics_Folder_Report.md
docs/superpowers/plans/: 2026-06-09-digital-twin-grow-sim.md  2026-06-09-sim-data-factory.md  2026-06-09-twin-dashboard.md  2026-06-09-twin-frontend-next.md  2026-06-11-sim-ml-eval-extras.md  2026-06-11-sim-ml-state-estimation.md  2026-06-12-always-on-living-twin.md
docs/superpowers/specs/: 2026-06-09-digital-twin-grow-sim-design.md  2026-06-09-sim-data-factory-design.md  2026-06-09-twin-dashboard-frontend-design.md  2026-06-09-twin-frontend-next-handoff.md  2026-06-10-sim-ml-state-estimation-design.md  2026-06-12-always-on-living-twin-design.md  2026-06-12-sim-ml-ec-gain-domain-randomization-design.md
hal/: __init__.py  base.py  calibration.py  device_set.py  factory.py  ph.py  pump.py  registry.py  tds.py  temp.py
hal/drivers/: __init__.py  context.py  generic_mock.py  mock_state.py  ph.py  pump.py  sim_drivers.py  tds.py  temp.py
hal/sim/: __init__.py  build.py  clock.py  crop.py  drivers.py  environment.py  noise.py  plant.py  reservoir.py  world.py
hal/sim/factory/: __init__.py  __main__.py  cli.py  config.py  runner.py  scenarios.py  schema.py  sweep.py  writer.py
ml/: README.md  __init__.py  __main__.py  cli.py  config.py
ml/data/: __init__.py  corpus.py  features.py  loading.py  splits.py
ml/models/: __init__.py  estimators.py  evaluate.py  train.py
profiles/: _conflict.yaml  bench-sim.yaml  bench.yaml  commercial.yaml
runs/: baseline.yaml  corpus.yaml
scripts/: calibrate_ph.py  seed_mock_data.py  test_all.py
service/: __init__.py  config.py  datasets.py  main.py  poller.py  topology.py  twin_archive.py
service/api/: __init__.py  actuators.py  datasets.py  health.py  sensors.py  topology.py  twin.py
service/db/: __init__.py  models.py  session.py
service/profile/: __init__.py  loader.py  schema.py
tests/: conftest.py  test_api.py  test_config.py  test_datasets_api.py  test_db.py  test_deploy.py  test_device_set.py  test_hal.py  test_mock_state.py  test_pi_config.py  test_poller.py  test_profile.py  test_profile_loader.py  test_registry.py  test_scaffold.py  test_scripts.py  test_sim_speed.py  test_twin_api.py  test_twin_archive.py
tests/factory/: test_cli.py  test_config.py  test_roundtrip.py  test_runner.py  test_scenarios.py  test_schema.py  test_sweep.py  test_writer.py
tests/ml/: conftest.py  test_cli.py  test_config.py  test_corpus.py  test_corpus_config.py  test_estimators.py  test_eval_extras.py  test_evaluate.py  test_features.py  test_imports.py  test_integration.py  test_loading.py  test_splits.py  test_train.py
tests/sim/: test_build_world.py  test_checkpoint.py  test_clock.py  test_crop.py  test_environment.py  test_factory_sim.py  test_grow_e2e.py  test_noise.py  test_plant.py  test_poller_sim.py  test_poller_twin.py  test_reservoir.py  test_sim_drivers.py  test_succession.py  test_world.py  test_world_state.py
web/: index.html  package-lock.json  package.json  plant-preview.html  tailwind.config.ts  vite.config.ts
web/src/: App.tsx  main.tsx  preview.tsx
web/src/components/: HistoryChart.tsx  PumpControl.tsx  SensorCard.tsx  ZoneSection.tsx
web/src/lib/: api.ts  datasets.test.ts  (+15 more)
(+15 files in other folders)
